fix(tooltip): right align tooltip to prevent menu overflow

--- a/assets/_sass/_tooltips.scss
+++ b/assets/_sass/_tooltips.scss
@@ -54,7 +54,7 @@ $tooltip-triangle-top: -20%;
     border-radius: 6px;
     bottom: 120%;
     padding: 5px;
-    margin-left: -165px;
+    margin-left: -50px;
     z-index: $zindex-popover;
     -webkit-transition: $tooltip-animation;
     -moz-transition: $tooltip-animation;
